2005-12-18 David Grellscheid <David.Grellscheid@durham.ac.uk>

	* Shower/SudakovFormFactor.cc: Veto bugs fixed
	
	* Shower/KinematicsReconstructor.cc, Shower/BackwardEvolver.cc:
	wrapped forced splittings in '#ifdef PHILSCODE', to make Shower
	testing work (also in PDF/BaryonRemnants.cc)

	* Shower/SplittingGenerator.cc: small change, wrapped some 'cout'
	in a DEBUG_LEVEL test

	* Hadronization/ClusterHadronizationHandler.cc: added missing
	Remnant code

	* src/Shower.in: typo c->c,cbar fixed to g->c,cbar; cleaned up
	arrangement 

2005-12-17 David Grellscheid <David.Grellscheid@durham.ac.uk>

	* Shower/*, src/*.in ( and others ): Full merge of Stefan's Shower
	changes, Phil's refactoring of forced splitting, Peter's Remnant
	class and Durham bugfixes. NOT tested yet.

	* PDF/BaryonRemnants.cc: Remnant and forced splitting don't work
	together so far. File contains #defines to choose version. This
	must be resolved! NOT tested yet. 

2005-10-25  Martyn Gigg  <dph3mag@d31.phyip3.dur.ac.uk>

	* Decay/Perturbative/SMHiggsGGHiggsPPDecayer.h (Repository): Renamed SMHDecayer to SMHiggsGGHiggsPPDecayer 

2005-10-25  Peter Richardson  <Peter.Richardson@durham.ac.uk>

	* src (Repository): correction to ensure HGG and HPP work and minor structure for vertices

2005-10-24  Martyn Gigg  <dph3mag@d31.phyip3.dur.ac.uk>

	* Helicity/Vertex/StandardModel/SMHPPVertex.h (Repository): Added SMHPPVertex class

	* Helicity/Vertex/StandardModel/SMHGGVertex.h (Repository): Added SMHGGVertex 

	* Helicity/Vertex/Scalar/SVVLoopVertex.h (Repository): Added SVVLoopVertex class

	* Helicity/Vertex/Scalar/GeneralSVVVertex.h (Repository): Added GeneralSVVVertex class 

	* Decay/Perturbative/SMHDecayer.h (Repository): Added HVV decayer 

2005-10-19  Pete's account  <Peter.Richardson@durham.ac.uk>

	* Helicity/Vertex/StandardModel/SMFFHVertex.cc (Repository): changes to remove hard-wired value of pi
