@@ -1,5 +1,5 @@
 # ForcedSplitting.lo - a libtool object file
-# Generated by ltmain.sh - GNU libtool 1.5.14 (1.1220.2.195 2005/02/12 12:12:33)
+# Generated by ltmain.sh - GNU libtool 1.5.6 (1.1220.2.95 2004/04/11 05:50:42)
 #
 # Please DO NOT delete this file!
 # It is necessary for linking the library.
