@@ -8,15 +8,13 @@
 #include "ThePEG/Interface/ClassDocumentation.h"
 #include "ThePEG/Persistency/PersistentOStream.h"
 #include "ThePEG/Persistency/PersistentIStream.h"
-// #include "ThePEG/Interface/Parameter.h" 
 #include "ThePEG/Interface/Reference.h" 
 #include "Herwig++/Utilities/HwDebug.h"
 #include "ThePEG/Repository/EventGenerator.h"
 #include "ShowerParticle.h"
 #include "ShowerKinematics.h"
 #include "QtildaShowerKinematics1to2.h"
-#include "SplittingFunction.h"
-//#include "ShowerColourLine.h"
+#include "Herwig++/Shower/SplittingFunctions/SplittingFunction.h"
 #include "ThePEG/EventRecord/ColourLine.h"
 #include "ShowerConfig.h"
 #include "QQbarG.h"
