@@ -12,11 +12,8 @@
 #include "ThePEG/Interface/Reference.h"
 #include "ThePEG/PDT/EnumParticles.h"
 #include "ShowerParticle.h"
-//#include "ThePEG/Handlers/PartialCollisionHandler.h"
-//#include "ThePEG/Repository/FullEventGenerator.h"
 #include "ShowerAlpha.h"
-#include "SplittingFunction.h"
-#include "SudakovFormFactor.h"
+#include "Herwig++/Shower/SplittingFunctions/SplittingFunction.h"
 #include "IS_QtildaShowerKinematics1to2.h"
 #include "FS_QtildaShowerKinematics1to2.h"
 #include "Herwig++/Utilities/HwDebug.h"
